# exiv2-raw-preview-rating-plugins

./: .gitignore  Makefile  Makefile.am  README.md  config.sh  configure.ac  eog_plugin_exiv2_ratings.cc  exif-annotate.sh  exiv2_pixbuf_loader.cc  gpixbuf.c  gpixbufldr.c  leak.cc
.github/workflows/: ubuntu.yml
eog-plugin/: Makefile  Makefile.am  exiv2_ratings.plugin
gdk-pixbuf/: Buf.h  DbgHlpr.cc  DbgHlpr.h  ImgFactory.cc  ImgFactory.h  Makefile  Makefile.am  Makefile.orig  exiv2_pixbuf_loader.cc  leak.cc
src/: Makefile.am
src/eog-plugin/: Makefile.am  eog-exiv2-rating.cc  eog-exiv2-rating.h  eog_plugin_exiv2_ratings.cc  eog_plugin_exiv2_ratings.h  exiv2-rating.tmpl  exiv2_rating.tmpl  exiv2_ratings.plugin  exiv2_ratings.tmpl
src/eom-plugin/: Makefile.am  eom-exiv2-rating.cc  eom-exiv2-rating.h  exiv2-rating.plugin  exiv2_rating.plugin
src/gdk-pixbuf/: Buf.h  ColorProfiles.cc  ColorProfiles.h  DbgHlpr.cc  DbgHlpr.h  Env.cc  Env.h  ImgFactory.cc  ImgFactory.h  ImgXfrm.cc  ImgXfrm.h  Makefile.am  exiv2_pixbuf_loader.cc  leak.cc  version.cc  version.h
src/gdk-pixbuf/data/: Makefile.am  org.gtk.gdk-pixbuf.exiv2-rawpreview.gschema.xml
src/lib/: DbgHlpr.h  ExifProxy.cc  ExifProxy.h  Makefile.am
tests/: Makefile.am  gpixbufldr.c  leak.cc  mag.cc  magick-omp.cc  magick-opm.cc  magick.cc  xmp.cc
